src/app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  max-width: 1440px;
  margin: 0 auto;
  font-family: 'Poppins', sans-serif;
}

.gallery {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  grid-gap: 1rem;
  padding: 1rem;
}

.hide_scrollbar::-webkit-scrollbar {
  display: none;
}

